# metar-display

./: .gitignore  CHANGELOG.md  README.md  metar-display.cabal  pbmetar.cabal  polybar-metar-weather.cabal  stack.yaml
hsinstall/share/applications/: metar-display.desktop
src/app/: Main.hs
src/app/MetarDisplay/: Opts.hs
src/app/PbMetar/: Opts.hs
src/lib/MetarDisplay/: Curl.hs  Log.hs  Math.hs  Metar.hs  Monad.hs  Output.hs
src/lib/MetarDisplay/Model/: Common.hs  Humidity.hs  Options.hs  Temperature.hs  Weather.hs  Wind.hs
src/lib/PbMetar/: Common.hs  Curl.hs  Log.hs  Math.hs  Metar.hs  Output.hs  Types.hs
src/lib/PbMetar/Model/: Common.hs  Options.hs  Temperature.hs  Weather.hs  Wind.hs
src/test/: Main.hs
