cabal-version: 2.2

name: metar-display
version: 1.2
synopsis: Retrieve and parse METAR weather for display
description: A utility to retrieve METAR weather info, parse it and construct
  human readable output.
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2023 Dino Morelli
category: Application, CLI, Command Line Tool, CommandLine, Console
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  doc/metar-display_sample-output-01.png
  .gitignore
  hsinstall/share/applications/metar-display.desktop
  hsinstall/share/icons/hicolor/scalable/apps/metar-display.svg
  README.md
  stack.yaml
  stack.yaml.lock

source-repository head
  type: git
  location: https://github.com/dino-/metar-display

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      base >=3 && <5
    , formatting
    , time

library
  import: lang
  exposed-modules:
    MetarDisplay.Curl
    MetarDisplay.Math
    MetarDisplay.Metar
    MetarDisplay.Model.Common
    MetarDisplay.Model.Humidity
    MetarDisplay.Model.Options
    MetarDisplay.Model.Temperature
    MetarDisplay.Model.Weather
    MetarDisplay.Model.Wind
    MetarDisplay.Monad
    MetarDisplay.Output
  hs-source-dirs:
    src/lib
  build-depends:
      co-log
    , co-log-simple
    , curl
    , filepath
    , mtl
    , mustache
    , regex-compat
    , text

executable metar-display
  import: lang
  main-is: Main.hs
  other-modules:
    MetarDisplay.Opts
    Paths_metar_display
  autogen-modules:
    Paths_metar_display
  hs-source-dirs:
    src/app
  build-depends:
      co-log-simple
    , heredoc
    , metar-display
    , optparse-applicative
    , prettyprinter
    , text

test-suite test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      metar-display
    , tasty
    , tasty-hunit
