cabal-version: 2.2

name: polybar-metar-weather
version: 1.0
synopsis: Retrieve and parse METAR weather for Polybar
description: A utility to retrieve METAR weather info, parse it and construct
  monitor output for polybar. Uses FontAwesome glyphs.
author: Dino Morelli
maintainer: dino@ui3.info
copyright: 2023 Dino Morelli
category: Unclassified
license: ISC
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  .gitignore
  README.md
  stack.yaml

source-repository head
  type: git
  location: https://github.com/dino-/polybar-metar-weather

common lang
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
  ghc-options:
    -fwarn-tabs
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
  build-depends:
      time

library
  import: lang
  exposed-modules:
    PbMetar.Common
    PbMetar.Curl
    PbMetar.Log
    PbMetar.Math
    PbMetar.Metar
  hs-source-dirs:
    src/lib
  build-depends:
      base >=3 && <5
    , curl
    , hslogger
    , regex-compat

executable polybar-metar-weather
  import: lang
  main-is: Main.hs
  other-modules:
    Paths_polybar_metar_weather
    PbMetar.Opts
  hs-source-dirs:
    src/app
  build-depends:
      base >=3 && <5
    , heredoc
    , optparse-applicative
    , polybar-metar-weather
    , prettyprinter

test-suite test-suite
  import: lang
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    src/test
  ghc-options: -rtsopts -threaded -with-rtsopts=-N
  build-depends:
      base >=3 && <5
    , polybar-metar-weather
    , tasty
    , tasty-hunit
